<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="login_title">Tic Tac Toe Awaits!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="clear">Clear</string>
    <string name="create">Create</string>
    <string name="new_game">New Game</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="images">Images</string>
    <string name="maps">Maps</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="sensors">Sensors</string>
    <string name="game">Game</string>
</resources>
